# railway-docker-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  server.yaml  tools.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docker-mcp-submission/: SUBMISSION_GUIDE.md  server.yaml  tools.json
src/railway_mcp/: __init__.py  __main__.py  client.py  config.py  exceptions.py  server.py
src/railway_mcp/graphql/: __init__.py  mutations.py  queries.py
src/railway_mcp/tools/: __init__.py  deployments.py  domains.py  environments.py  projects.py  services.py  status.py  templates.py  variables.py
tests/: __init__.py  test_client.py  test_tools.py
