[project]
name = "railway-mcp"
version = "0.1.0"
description = "MCP server for Railway platform - deploy and manage Railway projects"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "MehdiZare", email = "mehdi.zare@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["mcp", "railway", "deployment", "cloud", "infrastructure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "fastmcp>=2.14.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
]

[project.scripts]
railway-mcp = "railway_mcp:main"

[project.urls]
Homepage = "https://github.com/MehdiZare/railway-docker-mcp"
Repository = "https://github.com/MehdiZare/railway-docker-mcp"
Issues = "https://github.com/MehdiZare/railway-docker-mcp/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "respx>=0.22.0",
    "ruff>=0.9.1",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/railway_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "ARG001", # unused function argument (common in tools)
]

[tool.ruff.lint.isort]
known-first-party = ["railway_mcp"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "ARG002"]
